# app/Http/Controllers/API/ActivityLogController.php
@@ -12,22 +12,92 @@ use Illuminate\Support\Facades\Validator;
 class ActivityLogController extends BaseController
 {
     /**
-     * @return \Illuminate\Http\JsonResponse
+     * @OA\Get(
+     *      path="/api/v1/activities",
+     *      operationId="activities-get",
+     *      tags={"Activities"},
+     *      summary="Get auth activities",
+     *      description="Returns auth data",
+     *      @OA\Parameter(
+     *          name="authorization",
+     *          description="Bearer token",
+     *          required=true,
+     *          @OA\Schema(
+     *              type="string",
+     *          ),
+     *          in="header"
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Retrieve auth activities.",
+     *          @OA\MediaType(
+     *              mediaType="application/json",
+     *          )
+     *       ),
+     * )
+     *
      */
     public function index()
     {
         $activityLogs = ActivityLog::with('user')->select(
             'id', 'activity')->where('user_id', Auth::id())
-            ->orderBy('created_at', 'DESC')->paginate(10);
+            ->orderBy('created_at', 'DESC')->get();
 
         return response()->json($activityLogs, 200);
     }
 
     /**
-     * Store a newly created resource in storage.
+     * @OA\Post(
+     *      path="/api/v1/activities",
+     *      operationId="activities-post",
+     *      tags={"Activities"},
+     *      summary="Save activity log.",
+     *      description="Activity has been created successfully.",
+     *      @OA\Parameter(
+     *          name="Authorization",
+     *          description="Bearer token",
+     *          required=true,
+     *          in="header",
+     *          @OA\Schema(type="string"),
+     *      ),
+     *      @OA\Parameter(
+     *          name="activity",
+     *          description="activity json",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="json",
+     *          ),
+     *      ),
+     *      @OA\Parameter(
+     *          name="notes",
+     *          description="notes",
+     *          required=false,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string",
+     *          ),
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Activity has been created successfully.",
+     *          @OA\MediaType(
+     *              mediaType="application/json",
+     *              @OA\JsonContent(type="object",example = {"success":true,"data":{"saved data"},"message":"Activity has been created successfully."})
+     *          )
+     *       ),
+     *      @OA\Response(
+     *          response=422,
+     *          description="Prerequisite failed.",
+     *          @OA\MediaType(
+     *              mediaType="application/json",
+     *              @OA\JsonContent(type="object",example = {"success":false,"data":{"errors"},"message":"Prerequisite failed."})
+     *          )
+     *       ),
+     *       @OA\Response(response=401, description="Unauthorised"),
+     *     )
      *
-     * @param  \Illuminate\Http\Request $request
-     * @return \Illuminate\Http\Response
+     * Returns with token
      */
     public function store(Request $request)
     {
@@ -37,7 +107,7 @@ class ActivityLogController extends BaseController
         ]);
 
         if ($validator->fails()) {
-            return $this->sendError('Validation Error.', $validator->errors(), 422);
+            return $this->sendError('Prerequisite failed.', $validator->errors(), 422);
         }
 
         $input = $request->only(['activity', 'notes']);
@@ -79,7 +149,7 @@ class ActivityLogController extends BaseController
         ]);
 
         if ($validator->fails()) {
-            return $this->sendError('Validation Error.', $validator->errors(), 422);
+            return $this->sendError('Prerequisite failed.', $validator->errors(), 422);
         }
 
         $activityLog = ActivityLog::find($id);
@@ -92,10 +162,36 @@ class ActivityLogController extends BaseController
     }
 
     /**
-     * Remove the specified resource from storage.
-     *
-     * @param  int $id
-     * @return \Illuminate\Http\Response
+     * @OA\Delete(
+     *      path="/api/v1/activities/{id}",
+     *      operationId="destroy-activity",
+     *      tags={"Activities"},
+     *      summary="Delete activity.",
+     *      description="Activity has been deleted successfully.",
+     *      @OA\Parameter(
+     *          name="Authorization",
+     *          description="Bearer token",
+     *          required=true,
+     *          in="header",
+     *          @OA\Schema(type="string"),
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Activity has been deleted successfully.",
+     *          @OA\MediaType(
+     *              mediaType="application/json",
+     *              @OA\JsonContent(type="object",example = {"success":true,"data":"","message":"Activity has been deleted successfully."})
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Failed to delete.",
+     *          @OA\MediaType(
+     *              mediaType="application/json",
+     *              @OA\JsonContent(type="object",example = {"success":false,"message":"Failed to delete."})
+     *          )
+     *      ),
+     * )
      */
     public function destroy($id)
     {
